tests/baselines/reference/ambientErrors1.errors.txt
tests/cases/compiler/ambientErrors1.ts(1,15): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/ambientErrors1.ts (1 errors) ====
    declare var x = 4;
                  ~
!!! error TS1039: Initializers are not allowed in ambient contexts.